--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -1,7 +1,10 @@
 //color variable
+$site-color: #0000cd;
+$site-color-hover: #000097;
+$site-color-light: rgba(0, 0, 255, 0.65);
+$grey: #b1b1b1;
+$grey-light: #d0d0d0;
 $light-grey-border: #EAE9E9;
-$header-color: #452070;
-$header-color-hover: #7b34ba;
 $header-li-active: rgba(123, 52, 186, 0.15);
 
 #header-navbar{
@@ -10,8 +13,23 @@ $header-li-active: rgba(123, 52, 186, 0.15);
 
   .navbar-header {
     .navbar-brand {
-      color: $header-color;
-      &:hover{color: $header-color-hover;}
+      color: $site-color;
+      &:hover{color: $site-color-hover;}
+    }
+    button{
+      &:active, &:focus{background: transparent;}
+      border: none;
+      &:hover{
+        background: transparent;
+        .icon-bar{
+          background: $site-color;
+        }
+      }
+      .icon-bar{
+        width: 24px;
+        height: 4px;
+        background: $grey;
+      }
     }
   }
 
@@ -20,16 +38,16 @@ $header-li-active: rgba(123, 52, 186, 0.15);
     li{
       a{
         &:hover{
-          color: $header-color-hover;
+          color: $site-color-hover;
         }
       }
       &.active{
-        border-bottom: 3px solid $header-color;
+        border-bottom: 3px solid $site-color;
         a {
-          background: $header-li-active;
-          color: $header-color;
+          background: #ffffff;
+          color: $site-color;
           &:hover{
-            color: $header-color-hover;
+            color: $site-color-hover;
           }
         }
       }
