--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -5,6 +5,7 @@
     margin-bottom: 5px;
 
     .header-info{
+      padding: 0px;
       .count{
         font-size: 0.9em;
         color: $grey-light-text;
@@ -16,6 +17,7 @@
     }
 
     .body, .people{
+      padding: 0px;
       .describe{
         font-weight: 300;
       }
@@ -33,5 +35,15 @@
         margin-bottom: 2px;
       }
     }
+  }
+}
+
+.user-tour-full-info{
+  .header{
+    padding: 0px;
+  }
+  .body{
+    padding: 0px;
+    text-align: left;
   }
 }
