--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -14,6 +14,16 @@
         margin-left: 10px;
         font-weight: 300;
       }
+      .response{
+        margin-left: 5px;
+        .glyphicon-ok-circle{
+          color: $green;
+          font-size: 1.4em;
+          position: relative;
+          top: 3px;
+        }
+        .view-count{font-weight: 300;}
+      }
     }
 
     .body, .people{
