--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -44,7 +44,7 @@ $fast-speed: 0.5s;
 @import "hotel";
 @import "popup";
 @import "tour";
-
+@import "flight";
 
 //fonts
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,700&subset=latin,cyrillic);
