--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -49,7 +49,7 @@ $fast-speed: 0.5s;
 //fonts
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,700&subset=latin,cyrillic);
 body {
-  font-family: 'Exo 2';
+  font-family: 'Exo 2' !important;
   #header-navbar {
     background: #ffffff;
     border-bottom: $light-grey-border;
